# intervaltree-stubs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
intervaltree-stubs/: __init__.pyi  interval.pyi  intervaltree.pyi  node.pyi
