[tool.poetry]
name = "intervaltree-stubs"
version = "0.2.0"
description = "Stubs for the intervaltree library"
authors = ["Benjamin Hines <Lubba64@gmail.com>"]
packages = [{include = "intervaltree-stubs"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.284"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# See https://github.com/microsoft/pyright/blob/main/docs/configuration.md
extraPaths = ["intervaltree-stubs"]
pythonVersion = "3.10"
# See table here: https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-rule-defaults
strict = ["intervaltree-stubs/**/*.py"]
useLibraryCodeForTypes = true
# These are all the options that pyright has which are not turned on by "strict mode" enabled above.
reportCallInDefaultInitializer = "warning"
# reportImplicitStringConcatenation = "none"
# reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "information"
# reportUnusedCallResult = "warning"

[tool.black]
line-length = 120
target-version = ['py310']
